
YOUTRACK
	IP-1394 httpd-logs-mngr starts before mysql server on reboot
	IP-1428 i-MSCP services such as imscp_network should not depend on the mysql service
	IP-1488 Show SSL-status on domain page
	IP-1500 Update fails when a customer's SSL certificate is invalid or expired
	IP-1501 i18n - "Ftp directories" string is not translatable

------------------------------------------------------------------------------------------------------------------------
1.2.15
------------------------------------------------------------------------------------------------------------------------

2016-03-02: Laurent Declercq
	RELEASE i-MSCP 1.2.15

BACKEND
	Changed: Usage of custom OpenSSL configuration file for self-signed SSL certificates (iMSCP::OpenSSL)
	Fixed: ALLOW_URL_FOPEN placeholder not replaced in pool configuration files when using per_domain INI level (PHP-FPM)
	Fixed: Exit code not returned to caller on segfault (signal 11)
	Fixed: Missing fallback value for allow_url_fopen in Modules::SubAlias
	Fixed: Obsolete SSL connection encryption method (nginx)

CONFIG
	Added: imscp_panel.service systemd unit file
	Added: OpenSSL configuration template file for self-signed SSL certificates
	Changed: SPF record entries from softfail to hardfail

DAEMON
	Fixed: Missing chdir() and umask() calls
	Fixed: STDIN, STDOUT and STDERR must be redirected to /dev/null
	Updated: Version to 1.2.5

DATABASE
	Added: Default value for the domain.external_mail_dns_ids field
	Added: Default value for the domain_aliasses.external_mail_dns_ids field
	Added: 'status' field to the ftp_users table

FRONTEND
	Fixed: Bad request error when editing PHP settings with per_user INI level (PHP Editor)
	Fixed: Could not add SSL certificate due to 'At least one intermediate certificate is invalid or missing' error
	Fixed: Exception raised due to missing default value for domain.external_mail_dns_ids
	Fixed: When customer account is being disabled, FTP users must be also disabled